--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <body>
 
-<p>Tu wklej link do pliku na dysku google:</p>
 
-<input type="text" id="link" value="">
+  <p>Format:</p>
+  <p>https://drive.google.com/file/d/xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx/view?usp=sharing</p>
+  
+<p>Tu wklej link:</p>
+  
+<input type="text" id="link" value="" size="100">
 </br>
 <button onclick="myFunction()">Konwertuj</button>
 <script>
