--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <p>Tu wklej link:</p>
   
 <input type="text" id="link" value="" size="100">
+  <label id="xd" text="1sd">
+    
 </br>
 <button onclick="myFunction()">Konwertuj</button>
 <script>
